@@ -106,7 +106,7 @@ public abstract class BalaWriter {
                                       this.packageContext.packageName().value(),
                                       this.packageContext.packageVersion().value().toString(),
                                       this.target);
-        // Create the archive over write if exists
+        // Create the archive overwrite if exists
         try (ZipOutputStream balaOutputStream = new ZipOutputStream(
                 new FileOutputStream(String.valueOf(balaPath.resolve(balaName))))) {
             // Now lets put stuff in
@@ -130,8 +130,7 @@ public abstract class BalaWriter {
 
         addBalaJson(balaOutputStream);
         addPackageDoc(balaOutputStream,
-                      this.packageContext.project().sourceRoot(),
-                      this.packageContext.packageName().toString());
+                      this.packageContext.packageManifest());
         addPackageSource(balaOutputStream);
         addResources(balaOutputStream);
         addIncludes(balaOutputStream);
@@ -147,7 +146,7 @@ public abstract class BalaWriter {
         Gson gson = new GsonBuilder().setPrettyPrinting().create();
         String balaJson = gson.toJson(new BalaJson());
         try {
-            putZipEntry(balaOutputStream, Paths.get(BALA_JSON),
+            putZipEntry(balaOutputStream, Path.of(BALA_JSON),
                     new ByteArrayInputStream(balaJson.getBytes(Charset.defaultCharset())));
         } catch (IOException e) {
             throw new ProjectException("Failed to write 'bala.json' file: " + e.getMessage(), e);
@@ -168,6 +167,7 @@ public abstract class BalaWriter {
         packageJson.setInclude(packageManifest.includes());
         packageJson.setVisibility(packageManifest.visibility());
         packageJson.setTemplate(packageManifest.template());
+        packageJson.setDescription(packageManifest.description());
 
         packageJson.setPlatform(target);
         packageJson.setBallerinaVersion(BALLERINA_SHORT_VERSION);
@@ -184,16 +184,46 @@ public abstract class BalaWriter {
         // Set graalvmCompatibility property in package.json
         setGraalVMCompatibilityProperty(packageJson, packageManifest);
 
+        setReadme(packageManifest, packageJson);
+        setModules(packageJson, packageManifest);
+
         // Remove fields with empty values from `package.json`
         Gson gson = new GsonBuilder().registerTypeHierarchyAdapter(Collection.class, new JsonCollectionsAdaptor())
                 .registerTypeHierarchyAdapter(String.class, new JsonStringsAdaptor()).setPrettyPrinting().create();
 
         try {
-            putZipEntry(balaOutputStream, Paths.get(PACKAGE_JSON),
+            putZipEntry(balaOutputStream, Path.of(PACKAGE_JSON),
                     new ByteArrayInputStream(gson.toJson(packageJson).getBytes(Charset.defaultCharset())));
         } catch (IOException e) {
             throw new ProjectException("Failed to write 'package.json' file: " + e.getMessage(), e);
         }
+    }
+
+    private void setReadme(PackageManifest packageManifest, PackageJson packageJson) {
+        if (packageManifest.readme() != null) { // Null check is required for ballerinai packages
+            packageJson.setReadme(BALA_DOCS_DIR + UNIX_FILE_SEPARATOR +
+                    Paths.get(packageManifest.readme()).getFileName());
+        }
+    }
+
+    private void setModules(PackageJson packageJson, PackageManifest packageManifest) {
+        List<PackageManifest.Module> modules = new ArrayList<>();
+        String packageDocPathPrefix = BALA_DOCS_DIR + UNIX_FILE_SEPARATOR;
+
+        List<PackageManifest.Module> moduleList = packageManifest.modules();
+        for (PackageManifest.Module module : moduleList) {
+            String moduleDoc = null;
+            if (module.readme() != null && !module.readme().isEmpty()) {
+                moduleDoc = packageDocPathPrefix + MODULES_ROOT + UNIX_FILE_SEPARATOR + module.name() +
+                        UNIX_FILE_SEPARATOR + Paths.get(module.readme()).getFileName();
+            }
+            modules.add(new PackageManifest.Module(
+                    module.name(),
+                    module.export(),
+                    module.description(),
+                    moduleDoc));
+        }
+        packageJson.setModules(modules);
     }
 
     private void setGraalVMCompatibilityProperty(PackageJson packageJson, PackageManifest packageManifest) {
@@ -254,20 +284,19 @@ public abstract class BalaWriter {
 
     // TODO when iterating and adding source files should create source files from Package sources
 
-    private void addPackageDoc(ZipOutputStream balaOutputStream, Path packageSourceDir, String pkgName)
+    private void addPackageDoc(ZipOutputStream balaOutputStream, PackageManifest packageManifest)
             throws IOException {
-        final String packageMdFileName = "Package.md";
-        final String moduleMdFileName = "Module.md";
 
-        Path packageMd = packageSourceDir.resolve(packageMdFileName);
-        Path docsDirInBala = Paths.get(BALA_DOCS_DIR);
-
-        // If `Package.md` exists, create the docs directory & add `Package.md`
-        if (packageMd.toFile().exists()) {
-            Path packageMdInBala = docsDirInBala.resolve(packageMdFileName);
-            putZipEntry(balaOutputStream, packageMdInBala,
-                    new FileInputStream(String.valueOf(packageMd)));
+        if (packageManifest.readme() == null) {
+            return;
         }
+        Path sourceRoot = this.packageContext.project().sourceRoot;
+        Path pkgReadme = Paths.get(packageManifest.readme());
+        Path docsDirInBala = Path.of(BALA_DOCS_DIR);
+
+        Path packageMdInBala = docsDirInBala.resolve(pkgReadme.getFileName());
+        putZipEntry(balaOutputStream, packageMdInBala,
+                new FileInputStream(pkgReadme.toString()));
 
         // If `icon` mentioned in the Ballerina.toml, add it to docs directory
         String icon = this.packageContext.packageManifest().icon();
@@ -277,35 +306,16 @@ public abstract class BalaWriter {
             putZipEntry(balaOutputStream, iconInBala, new FileInputStream(String.valueOf(iconPath)));
         }
 
-        // If `Module.md` of default module exists, create `docs/modules` directory & add `Module.md`
-        Path defaultModuleMd = packageSourceDir.resolve(moduleMdFileName);
         Path modulesDirInBalaDocs = docsDirInBala.resolve(MODULES_ROOT);
 
-        if (defaultModuleMd.toFile().exists()) {
-            Path defaultModuleMdInBalaDocs = modulesDirInBalaDocs.resolve(pkgName).resolve(moduleMdFileName);
-            putZipEntry(balaOutputStream, defaultModuleMdInBalaDocs,
-                    new FileInputStream(String.valueOf(defaultModuleMd)));
-        }
-
-        // Add other module docs
-        File modulesSourceDir = new File(String.valueOf(packageSourceDir.resolve(MODULES_ROOT)));
-        File[] directoryListing = modulesSourceDir.listFiles();
-
-        if (directoryListing != null) {
-            for (File moduleDir : directoryListing) {
-                if (moduleDir.isDirectory()) {
-                    // Get `Module.md` path
-                    Path otherModuleMd = packageSourceDir.resolve(MODULES_ROOT).resolve(moduleDir.getName())
-                            .resolve(moduleMdFileName);
-                    // Create `package.module` folder, if `Module.md` path exists
-                    if (otherModuleMd.toFile().exists()) {
-                        Path otherModuleMdInBalaDocs = modulesDirInBalaDocs.resolve(pkgName + "." + moduleDir.getName())
-                                .resolve(moduleMdFileName);
-                        putZipEntry(balaOutputStream, otherModuleMdInBalaDocs,
-                                new FileInputStream(String.valueOf(otherModuleMd)));
-                    }
-                }
+        for (PackageManifest.Module module : packageManifest.modules()) {
+            if (module.readme() == null || module.readme().isEmpty()) {
+                continue;
             }
+            Path otherReadmeMdInBalaDocs = modulesDirInBalaDocs.resolve(module.name())
+                    .resolve(Paths.get(module.readme()).getFileName());
+            putZipEntry(balaOutputStream, otherReadmeMdInBalaDocs,
+                    new FileInputStream(sourceRoot.resolve(module.readme()).toString()));
         }
     }
 
@@ -334,7 +344,7 @@ public abstract class BalaWriter {
             for (DocumentId docId : module.documentIds()) {
                 Document document = module.document(docId);
                 if (document.name().endsWith(BLANG_SOURCE_EXT)) {
-                    Path documentPath = Paths.get(MODULES_ROOT, module.moduleName().toString(), document.name());
+                    Path documentPath = Path.of(MODULES_ROOT, module.moduleName().toString(), document.name());
                     char[] documentContent = document.textDocument().toCharArray();
 
                     putZipEntry(balaOutputStream, documentPath,
@@ -350,7 +360,7 @@ public abstract class BalaWriter {
         // copy resources
         for (DocumentId documentId : packageContext.resourceIds()) {
             String resourceFile = packageContext.resourceContext(documentId).name();
-            Path resourcePath = Paths.get(RESOURCE_DIR_NAME).resolve(resourceFile);
+            Path resourcePath = Path.of(RESOURCE_DIR_NAME).resolve(resourceFile);
             if (resourceFiles.add(resourcePath.toString())) {
                 putZipEntry(balaOutputStream, resourcePath, new ByteArrayInputStream(
                         packageContext.resourceContext(documentId).content()));
@@ -371,7 +381,7 @@ public abstract class BalaWriter {
             }
 
             for (Map.Entry<String, byte[]> entry : cachedResources.entrySet()) {
-                putZipEntry(balaOutputStream, Paths.get(entry.getKey()), new ByteArrayInputStream(entry.getValue()));
+                putZipEntry(balaOutputStream, Path.of(entry.getKey()), new ByteArrayInputStream(entry.getValue()));
             }
         }
     }
@@ -412,7 +422,7 @@ public abstract class BalaWriter {
         Gson gson = new GsonBuilder().setPrettyPrinting().create();
 
         try {
-            putZipEntry(balaOutputStream, Paths.get(DEPENDENCY_GRAPH_JSON),
+            putZipEntry(balaOutputStream, Path.of(DEPENDENCY_GRAPH_JSON),
                         new ByteArrayInputStream(gson.toJson(depGraphJson).getBytes(Charset.defaultCharset())));
         } catch (IOException e) {
             throw new ProjectException("Failed to write '" + DEPENDENCY_GRAPH_JSON + "' file: " + e.getMessage(), e);
@@ -427,7 +437,7 @@ public abstract class BalaWriter {
             String packageName = this.packageContext.packageName().toString();
             Path modulePath = moduleRootPath.resolve(moduleRootPath.relativize(relativePath).subpath(0, 1));
             Path pathInsideModule = modulePath.relativize(relativePath);
-            String moduleName = Optional.ofNullable(modulePath.getFileName()).orElse(Paths.get("")).toString();
+            String moduleName = Optional.ofNullable(modulePath.getFileName()).orElse(Path.of("")).toString();
             String updatedModuleName = packageName + ProjectConstants.DOT + moduleName;
             Path updatedModulePath = moduleRootPath.resolve(updatedModuleName);
             return updatedModulePath.resolve(pathInsideModule);
@@ -495,7 +505,7 @@ public abstract class BalaWriter {
     }
 
     private Path getIconPath(String icon) {
-        Path iconPath = Paths.get(icon);
+        Path iconPath = Path.of(icon);
         if (!iconPath.isAbsolute()) {
             iconPath = this.packageContext.project().sourceRoot().resolve(iconPath);
         }
@@ -522,7 +532,7 @@ public abstract class BalaWriter {
                         putDirectoryToZipFile(sourceDir.resolve(file.getName()), pathInZipFile, out);
                     } else {
                         Path fileNameInBala =
-                                pathInZipFile.resolve(sourceDir.relativize(Paths.get(file.getPath())));
+                                pathInZipFile.resolve(sourceDir.relativize(Path.of(file.getPath())));
                         putZipEntry(out, fileNameInBala,
                                 new FileInputStream(sourceDir + File.separator + file.getName()));
                     }
@@ -547,7 +557,7 @@ public abstract class BalaWriter {
             if (File.separatorChar == '\\') {
                 String replaced;
                 // Following is to evade spotbug issue if file is null
-                replaced = Optional.ofNullable(file.getFileName()).orElse(Paths.get("")).toString();
+                replaced = Optional.ofNullable(file.getFileName()).orElse(Path.of("")).toString();
                 Path parent = file.getParent();
                 while (parent != null) {
                     replaced = parent.getFileName() + UNIX_FILE_SEPARATOR + replaced;
