@@ -38,6 +38,7 @@ public class Package {
     private final Function<ModuleId, Module> populateModuleFunc;
     // Following are not final since they will be lazy loaded
     private Optional<PackageMd> packageMd = Optional.empty();
+    private Optional<PackageReadmeMd> readmeMd = Optional.empty();
     private Optional<BallerinaToml> ballerinaToml = Optional.empty();
     private Optional<DependenciesToml> dependenciesToml = Optional.empty();
     private Optional<CloudToml> cloudToml = Optional.empty();
@@ -226,6 +227,13 @@ public class Package {
         return this.balToolToml;
     }
 
+    /**
+     * Returns the PackageMd document.
+     *
+     * @return PackageMd
+     * @deprecated use {@link #readmeMd()} instead.
+     */
+    @Deprecated (forRemoval = true, since = "2.11.0")
     public Optional<PackageMd> packageMd() {
         if (this.packageMd.isEmpty()) {
             this.packageMd = this.packageContext.packageMdContext().map(c ->
@@ -233,6 +241,15 @@ public class Package {
             );
         }
         return this.packageMd;
+    }
+
+    public Optional<PackageReadmeMd> readmeMd() {
+        if (this.readmeMd.isEmpty()) {
+            this.readmeMd = this.packageContext.readmeMdContext().map(c ->
+                    PackageReadmeMd.from(c, this)
+            );
+        }
+        return this.readmeMd;
     }
 
     public Collection<DocumentId> resourceIds() {
@@ -264,7 +281,7 @@ public class Package {
      * in form of a {@code DiagnosticResult} instance.
      * <p>
      * Here is a sample usage of this API: <pre>
-     *   Project project = BuildProject.load(Paths.get(...));
+     *   Project project = BuildProject.load(Path.of(...));
      *   Package currentPackage = project.currentPackage();
      *   DiagnosticResult diagnosticsResult = currentPackage.runCodeGenAndModifyPlugins();
      *
@@ -320,7 +337,7 @@ public class Package {
      * reported by the code generator tasks in form of a {@code CodeGeneratorResult} instance.
      * <p>
      * Here is a sample usage of this API: <pre>
-     *   Project project = BuildProject.load(Paths.get(...));
+     *   Project project = BuildProject.load(Path.of(...));
      *   Package currentPackage = project.currentPackage();
      *   Package packageWithGenFiles = currentPackage.runCodeGeneratorPlugins();
      *
@@ -362,7 +379,7 @@ public class Package {
      * reported by the code modifier tasks in form of a {@code CodeModifierResult} instance.
      * <p>
      * Here is a sample usage of this API: <pre>
-     *   Project project = BuildProject.load(Paths.get(...));
+     *   Project project = BuildProject.load(Path.of(...));
      *   Package currentPackage = project.currentPackage();
      *   Package packageWithGenFiles = currentPackage.runCodeModifierPlugins();
      *
@@ -414,7 +431,7 @@ public class Package {
         return this.packageContext.getResolution(newCompOptions, true);
     }
 
-    private static class ModuleIterable implements Iterable {
+    private static class ModuleIterable implements Iterable<Module> {
 
         private final Collection<Module> moduleList;
 
@@ -428,7 +445,7 @@ public class Package {
         }
 
         @Override
-        public Spliterator spliterator() {
+        public Spliterator<Module> spliterator() {
             return this.moduleList.spliterator();
         }
     }
@@ -437,19 +454,19 @@ public class Package {
      * Inner class that handles package modifications.
      */
     public static class Modifier {
-        private PackageId packageId;
+        private final PackageId packageId;
         private PackageManifest packageManifest;
         private DependencyManifest dependencyManifest;
-        private Map<ModuleId, ModuleContext> moduleContextMap;
-        private Project project;
+        private final Map<ModuleId, ModuleContext> moduleContextMap;
+        private final Project project;
         private final DependencyGraph<ResolvedPackageDependency> dependencyGraph;
-        private CompilationOptions compilationOptions;
+        private final CompilationOptions compilationOptions;
         private TomlDocumentContext ballerinaTomlContext;
         private TomlDocumentContext dependenciesTomlContext;
         private TomlDocumentContext cloudTomlContext;
         private TomlDocumentContext compilerPluginTomlContext;
         private TomlDocumentContext balToolTomlContext;
-        private MdDocumentContext packageMdContext;
+        private MdDocumentContext readmeMdContext;
         private final Map<DocumentId, ResourceContext> resourceContextMap;
         private final Map<DocumentId, ResourceContext> testResourceContextMap;
 
@@ -466,7 +483,7 @@ public class Package {
             this.cloudTomlContext = oldPackage.packageContext.cloudTomlContext().orElse(null);
             this.compilerPluginTomlContext = oldPackage.packageContext.compilerPluginTomlContext().orElse(null);
             this.balToolTomlContext = oldPackage.packageContext.balToolTomlContext().orElse(null);
-            this.packageMdContext = oldPackage.packageContext.packageMdContext().orElse(null);
+            this.readmeMdContext = oldPackage.packageContext.readmeMdContext().orElse(null);
             resourceContextMap = copyResources(oldPackage, oldPackage.packageContext.resourceIds());
             testResourceContextMap = copyResources(oldPackage, oldPackage.packageContext.testResourceIds());
         }
@@ -586,7 +603,7 @@ public class Package {
          * @return Package.Modifier which contains the updated package
          */
         public Modifier addPackageMd(DocumentConfig documentConfig) {
-            this.packageMdContext = MdDocumentContext.from(documentConfig);
+            this.readmeMdContext = MdDocumentContext.from(documentConfig);
             return this;
         }
 
@@ -596,7 +613,7 @@ public class Package {
          * @return Package.Modifier which contains the updated package
          */
         public Modifier removePackageMd() {
-            this.packageMdContext = null;
+            this.readmeMdContext = null;
             return this;
         }
 
@@ -631,7 +648,7 @@ public class Package {
         }
 
         Modifier updatePackageMd(MdDocumentContext packageMd) {
-            this.packageMdContext = packageMd;
+            this.readmeMdContext = packageMd;
             return this;
         }
 
@@ -658,7 +675,7 @@ public class Package {
             PackageContext newPackageContext = new PackageContext(this.project, this.packageId, this.packageManifest,
                     this.dependencyManifest, this.ballerinaTomlContext, this.dependenciesTomlContext,
                     this.cloudTomlContext, this.compilerPluginTomlContext, this.balToolTomlContext,
-                    this.packageMdContext, this.compilationOptions, this.moduleContextMap,
+                    this.readmeMdContext, this.compilationOptions, this.moduleContextMap,
                     DependencyGraph.emptyGraph(), this.resourceContextMap,
                     this.testResourceContextMap);
             this.project.setCurrentPackage(new Package(newPackageContext, this.project));
@@ -792,7 +809,7 @@ public class Package {
 
                 moduleContextSet.add(new ModuleContext(this.project, moduleId, moduleDescriptor,
                         oldModuleContext.isDefaultModule(), srcDocContextMap, testDocContextMap,
-                        oldModuleContext.moduleMdContext().orElse(null),
+                        oldModuleContext.readmeMdContext().orElse(null),
                         oldModuleContext.moduleDescDependencies()));
                 // Remove the module with old PackageID from the compilation cache
                 PackageCache.getInstance(project.projectEnvironmentContext().getService(CompilerContext.class)).
