@@ -46,7 +46,10 @@ import java.util.stream.Collectors;
  *
  * @since 2201.1.1
  */
-public class NameUtil {
+public final class NameUtil {
+
+    private NameUtil() {
+    }
 
     /**
      * Generates a random name.
@@ -278,20 +281,11 @@ public class NameUtil {
      * @return The generated name for the raw type.
      */
     private static String generateNameForRawType(TypeDescKind rawType) {
-        String name;
-        switch (rawType) {
-            case RECORD:
-                name = "mappingResult";
-                break;
-            case TUPLE:
-            case ARRAY:
-                name = "listResult";
-                break;
-            default:
-                name = rawType.getName() + "Result";
-                break;
-        }
-        return name;
+        return switch (rawType) {
+            case RECORD -> "mappingResult";
+            case TUPLE, ARRAY -> "listResult";
+            default -> rawType.getName() + "Result";
+        };
     }
 
     /**
@@ -344,7 +338,7 @@ public class NameUtil {
             // Remove '_' underscores
             while (newName.contains("_")) {
                 String[] parts = newName.split("_");
-                List<String> restParts = Arrays.stream(parts, 1, parts.length).collect(Collectors.toList());
+                List<String> restParts = Arrays.stream(parts, 1, parts.length).toList();
                 newName = parts[0] + StringUtils.capitalize(String.join("", restParts));
             }
             // If empty, revert to original name
