@@ -20,7 +20,7 @@ import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 /**
  * Test the formatting of trap actions.
@@ -29,6 +29,7 @@ import java.nio.file.Paths;
  */
 public class TrapActionsTest extends FormatterTest {
 
+    @Override
     @Test(dataProvider = "test-file-provider")
     public void test(String source, String sourcePath) throws IOException {
         super.test(source, sourcePath);
@@ -42,6 +43,6 @@ public class TrapActionsTest extends FormatterTest {
 
     @Override
     public String getTestResourceDir() {
-        return Paths.get("actions", "trap").toString();
+        return Path.of("actions", "trap").toString();
     }
 }
