@@ -29,7 +29,6 @@ import org.testng.Assert;
 import org.testng.annotations.Test;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
 
 /**
@@ -38,7 +37,7 @@ import java.util.Arrays;
  * @since 2.0.0
  */
 public class TestExportModules {
-    private static final Path RESOURCE_DIRECTORY = Paths.get("src", "test", "resources");
+    private static final Path RESOURCE_DIRECTORY = Path.of("src", "test", "resources");
     private static final Path EXPORT_MODULES = RESOURCE_DIRECTORY.resolve("export_modules");
 
     @Test(description = "tests loading a valid bala project with export in package.json")
