@@ -31,7 +31,7 @@ import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.PrintStream;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -46,14 +46,15 @@ import java.util.stream.Stream;
  * @since 0.982.0
  */
 public class BMainInstance implements BMain {
-    private static final Logger log = LoggerFactory.getLogger(BMainInstance.class);
+    private static final Logger LOG = LoggerFactory.getLogger(BMainInstance.class);
     private static final String JAVA_OPTS = "JAVA_OPTS";
     private String agentArgs = "";
     private BalServer balServer;
+    public static final int TIMEOUT = 10000;
 
     private static class StreamGobbler extends Thread {
-        private InputStream inputStream;
-        private PrintStream printStream;
+        private final InputStream inputStream;
+        private final PrintStream printStream;
 
         public StreamGobbler(InputStream inputStream, PrintStream printStream) {
             this.inputStream = inputStream;
@@ -79,7 +80,7 @@ public class BMainInstance implements BMain {
     }
 
 
-    public BMainInstance(BalServer balServer) throws BallerinaTestException {
+    public BMainInstance(BalServer balServer) {
         this.balServer = balServer;
         initialize();
     }
@@ -94,10 +95,8 @@ public class BMainInstance implements BMain {
 
     private void configureAgentArgs() {
         // add jacoco agent
-        String jacocoArgLine = "-javaagent:" + Paths.get(balServer.getServerHome())
-                .resolve("bre").resolve("lib").resolve("jacocoagent.jar") + "=destfile=" +
-                Paths.get(System.getProperty("user.dir"))
-                        .resolve("build").resolve("jacoco").resolve("test.exec");
+        String jacocoArgLine = "-javaagent:" + Path.of(balServer.getServerHome(), "bre/lib/jacocoagent.jar")
+                + "=destfile=" + Path.of(System.getProperty("user.dir"), "build/jacoco/test.exec");
         agentArgs = jacocoArgLine + " ";
     }
 
@@ -200,7 +199,7 @@ public class BMainInstance implements BMain {
             envProperties = new HashMap<>();
         }
         runMain("build", new String[]{packagePath}, envProperties, null, leechers, sourceRoot);
-        runJar(Paths.get(sourceRoot, packagePath).toString(), packagePath, ArrayUtils.addAll(flags, args),
+        runJar(Path.of(sourceRoot, packagePath).toString(), packagePath, ArrayUtils.addAll(flags, args),
                 envProperties, clientArgs, leechers, sourceRoot);
     }
 
@@ -220,7 +219,7 @@ public class BMainInstance implements BMain {
     }
 
     public String getBalServerHome() {
-        return Paths.get(balServer.getServerHome()).toString();
+        return Path.of(balServer.getServerHome()).toString();
     }
 
     /**
@@ -530,7 +529,7 @@ public class BMainInstance implements BMain {
      */
     private void runJar(String sourceRoot, String packageName, String[] args, Map<String, String> envProperties,
                         String[] clientArgs, LogLeecher[] leechers, String commandDir) throws BallerinaTestException {
-        executeJarFile(Paths.get(sourceRoot, "target", "bin", packageName + ".jar").toFile().getPath(),
+        executeJarFile(Path.of(sourceRoot, "target", "bin", packageName + ".jar").toFile().getPath(),
                 args, envProperties, clientArgs, leechers, commandDir);
     }
 
@@ -547,8 +546,8 @@ public class BMainInstance implements BMain {
      */
     private void runJar(String balFile, String[] args, Map<String, String> envProperties, String[] clientArgs,
                         LogLeecher[] leechers, String commandDir) throws BallerinaTestException {
-        String balFileName = Paths.get(balFile).getFileName().toString();
-        String jarPath = Paths.get(Paths.get(commandDir).toString(), balFileName.substring(0, balFileName.length() -
+        String balFileName = Path.of(balFile).getFileName().toString();
+        String jarPath = Path.of(Path.of(commandDir).toString(), balFileName.substring(0, balFileName.length() -
                 4) + ".jar").toString();
         executeJarFile(jarPath, args, envProperties, clientArgs, leechers, commandDir);
     }
